--- a/src/CloseAllTabs.csproj
+++ b/src/CloseAllTabs.csproj
@@ -50,6 +50,9 @@
   <ItemGroup>
     <Compile Include="Commands\CollapseFolders.cs" />
     <Compile Include="Commands\CloseOpenDocuments.cs" />
+    <Compile Include="Options.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source.extension.cs">
       <DependentUpon>source.extension.vsixmanifest</DependentUpon>
