--- a/src/CloseAllTabs.csproj
+++ b/src/CloseAllTabs.csproj
@@ -60,6 +60,10 @@
     <Compile Include="VSPackage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\LICENSE">
+      <Link>Resources\LICENSE</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="packages.config" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
