--- a/src/CloseAllTabs.csproj
+++ b/src/CloseAllTabs.csproj
@@ -49,6 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Commands\DeleteBinFolder.cs" />
+    <Compile Include="Commands\ImportAttribute.cs" />
     <Compile Include="Commands\SolutionExplorerFocus.cs" />
     <Compile Include="Commands\CollapseFolders.cs" />
     <Compile Include="Commands\CloseOpenDocuments.cs" />
