Add remove .vs folder.

--- a/src/CloseAllTabs.csproj
+++ b/src/CloseAllTabs.csproj
@@ -56,6 +56,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Commands\DeleteBase.cs" />
+    <Compile Include="Commands\DeleteDotVsFolder.cs" />
     <Compile Include="Commands\DeleteTestResultsFolder.cs" />
     <Compile Include="Commands\DeleteBinFolder.cs" />
     <Compile Include="Commands\ImportAttribute.cs" />
